--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 DB_USER=npm
 # A strong, random password should be used here
-DB_PASSWORD= # Example: pmlsNZZ&6aNt#n
+DB_PASSWORD= # Example: 'password123!'
 DB_NAME=npm
