--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,6 @@ jobs:
                   key: ${{ secrets.SSH_KEY }}
                   script: |
                       cd ~/programming/docker_container/npm_portainer_container
-                      git pull origin main
+                      git pull origin master
                   #   docker compose pull
                   #   docker compose up -d
