--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,17 +11,35 @@ jobs:
         runs-on: ubuntu-latest
 
         steps:
-            - name: Checkout repo
+            - name: Checkout code
               uses: actions/checkout@v4
 
-            - name: Deploy via SSH
-              uses: appleboy/ssh-action@v1.0.3
+            - name: Set up SSH
+              uses: webfactory/ssh-agent@v0.9.0
               with:
-                  host: ${{ secrets.SSH_HOST }}
-                  username: ${{ secrets.SSH_USER }}
-                  key: ${{ secrets.SSH_KEY }}
-                  script: |
-                      cd ~/programming/docker_container/npm_portainer_container
-                      git pull origin master
-                  #   docker compose pull
-                  #   docker compose up -d
+                  ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+
+            - name: Deploy to server
+              run: |
+                  ssh -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} << 'EOF'
+                  set -e
+                  cd ~/programming/docker_container/npm_portainer_container
+
+                  echo "🔄 Pulling latest changes from Git..."
+                  git reset --hard
+                  git pull origin master
+
+                  echo "📦 Pulling latest Docker images..."
+                  docker compose pull
+
+                  echo "🛑 Stopping and removing old containers..."
+                  docker compose down
+
+                  echo "🚀 Starting containers with updated configuration..."
+                  docker compose up -d --remove-orphans
+
+                  echo "🧹 Removing unused images..."
+                  docker image prune -f
+
+                  echo "✅ Deployment completed successfully."
+                  EOF
